// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow Row should be clickable when showContributorAssignment set to true 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow Row should not be clickable when showContributorAssignment set to false 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders reorder buttons, contributor assignment & delete button 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record up the order"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Move record up the order"
            disabled={false}
            id="move-up-0"
            onClick={[Function]}
          >
            <KeyboardArrowUpIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record down the order"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Move record down the order"
            disabled={false}
            id="move-down-0"
            onClick={[Function]}
          >
            <KeyboardArrowDownIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      index={0}
      selectedClass="selected"
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      index={0}
      selectedClass="selected"
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set, contributor author details & delete button 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "aut_created_date": "2007-08-09",
          "aut_description": null,
          "aut_display_name": "J Researcher",
          "aut_email": null,
          "aut_external_id": "0001098586",
          "aut_fname": "J",
          "aut_google_scholar_id": "kUemDfMAAAAJ",
          "aut_homepage_link": null,
          "aut_id": 410,
          "aut_lname": "Researcher",
          "aut_mname": null,
          "aut_mypub_url": null,
          "aut_orcid_id": "0000-0001-1111-1111",
          "aut_org_staff_id": "0000111",
          "aut_org_student_id": null,
          "aut_org_username": "uqresearcher",
          "aut_people_australia_id": null,
          "aut_position": null,
          "aut_publons_id": null,
          "aut_ref_num": null,
          "aut_researcher_id": null,
          "aut_rid_last_updated": null,
          "aut_rid_password": null,
          "aut_scopus_id": null,
          "aut_student_username": null,
          "aut_title": "Professor",
          "aut_update_date": null,
          "is_administrator": 0,
          "is_super_administrator": 0,
          "nameAsPublished": "J. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "creatorRole": "Investigator",
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      index={0}
      selectedClass="selected"
      showRoleInput={true}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "creatorRole": "Investigator",
          "nameAsPublished": "J. Smith",
          "selected": true,
        }
      }
      index={0}
      selectedClass="selected"
      showRoleInput={true}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should assign contributor 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "affiliation": "NotUQ",
          "nameAsPublished": "test",
          "orgaff": "Somewhere",
          "orgtype": "453983",
          "selected": true,
        }
      }
      index={0}
      selectedClass="selected"
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should call callback functions on ListItem 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": undefined,
          }
        }
      >
        <PersonIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "identifierName": "test-class-1",
          "identifierSubtitle": "test-class-2",
        }
      }
      contributor={
        Object {
          "affiliation": "NotUQ",
          "nameAsPublished": "test",
          "orgaff": "Somewhere",
          "orgtype": "453983",
          "selected": true,
        }
      }
      index={0}
      showRoleInput={true}
      suffix=" listed contributor"
      width="xs"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "undefined",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should get row icon 1`] = `<Memo(HowToRegIcon) />`;

exports[`Component ContributorRow should get row icon 2`] = `<Memo(LockIcon) />`;

exports[`Component ContributorRow should have a proper style generator 1`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should have a proper style generator 2`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should have a proper style generator 3`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should render a row with a disabled contributor 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (undefined) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(ForwardRef(Tooltip))
          title="You are not able to edit this row"
        >
          <LockIcon />
        </WithStyles(ForwardRef(Tooltip))>
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "disabled": true,
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render row as required 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label="Select this record (Test) to assign it to you"
    classes={
      Object {
        "root": "highlighted",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "highlighted": "highlighted",
        }
      }
      contributor={
        Object {
          "affilication": "NotUQ",
          "nameAsPublished": "Test",
          "orgaff": "Test",
          "orgtype": "NGO",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      suffix=" listed contributor"
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            aria-label="Remove this record"
            disabled={false}
            id="delete-record-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;

exports[`Component ContributorRow should render with missing aria label if selectHint prop is falsy 1`] = `
<Fragment>
  <WithStyles(ConfirmDialogBox)
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(ListItem))
    aria-label=""
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    id="contributor-editor-row-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(ListItemIcon))
        classes={
          Object {
            "root": "",
          }
        }
      >
        <PersonOutlinedIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
    </Hidden>
    <ContributorRowText
      canEdit={false}
      classes={
        Object {
          "hideIcon": "hideIcon",
          "identifierName": "identifierName",
          "identifierSubtitle": "identifierSubtitle",
          "listItem": "listItem",
          "primary": "primary",
          "selected": "selected",
        }
      }
      contributor={
        Object {
          "nameAsPublished": "A. Smith",
        }
      }
      index={0}
      selectedClass=""
      showRoleInput={false}
      width="md"
    />
    <WithStyles(ForwardRef(ListItemSecondaryAction))>
      <WithStyles(ForwardRef(Tooltip))
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
      >
        <span>
          <WithStyles(ForwardRef(IconButton))
            disabled={false}
            id="function deleteButtonId() {
          return 'delete-record-0';
        }-0"
            onClick={[Function]}
          >
            <DeleteIcon
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(ForwardRef(IconButton))>
        </span>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</Fragment>
`;
